--- a/lib/conf/nginx.conf
+++ b/lib/conf/nginx.conf
@@ -75,7 +75,16 @@ server
         location /nginx_status
         {
             stub_status on;
-            access_log   off;
+            access_log  off;
+        }
+
+        location ~* \.php$
+        {
+            fastcgi_index index.php;
+            fastcgi_pass  127.0.0.1:9000;
+            include       fastcgi_params;
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+            fastcgi_param SCRIPT_NAME     $fastcgi_script_name;
         }
 
         location ~ .*\.(gif|jpg|jpeg|png|bmp|swf)$
