调整nginx配置文件，增加了fastcgi.conf文件。

--- a/lib/conf/nginx.conf
+++ b/lib/conf/nginx.conf
@@ -70,7 +70,7 @@ server
         root  /home/www/default;
 
         #error_page   404   /404.html;
-        include enable-php.conf;
+        #include enable-php.conf;
 
         location /nginx_status
         {
