--- a/lib/conf/enable-ssl-example.conf
+++ b/lib/conf/enable-ssl-example.conf
@@ -2,20 +2,20 @@ server
         {
         listen 443 ssl spdy;
 		#listen [::]:443 ssl spdy;
-        server_name     lnmp.org www.lnmp.org;
+        server_name     moqifei.com www.moqifei.com;
         index index.html index.htm index.php default.html default.htm default.php;
-        root  /home/wwwroot/lnmp.org;
+        root  /home/www/moqifei.com;
         ssl on;
-        ssl_certificate /home/ssl/lnmp.org/ssl.crt;
-        ssl_certificate_key /home/ssl/lnmp.org/ssl.key;
+        ssl_certificate /home/ssl/moqifei.com/ssl.crt;
+        ssl_certificate_key /home/ssl/moqifei.com/ssl.key;
         ssl_session_timeout 5m;
         ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
         ssl_prefer_server_ciphers on;
         ssl_ciphers ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-RC4-SHA:ECDHE-RSA-AES256-SHA:DHE-RSA-AES256-SHA:DHE-RSA-AES128-SHA:RC4-SHA:!aNULL:!eNULL:!EXPORT:!DES:!3DES:!MD5:!DSS:!PKS;
         ssl_session_cache builtin:1000 shared:SSL:10m;
-        
+
 		#error_page   404   /404.html;
-        include enable-php.conf;
+        #include enable-php.conf;
 
         location /nginx_status
         {
@@ -33,12 +33,12 @@ server
             expires      12h;
         }
 
-        access_log  /home/wwwlogs/lnmp.log  access;
+        access_log  /home/www/wwwlogs/moqifei.log  access;
 }
 
 server
         {
         listen          80;
-        server_name lnmp.org www.lnmp.org;
-        return 301 https://lnmp.org$request_uri;
+        server_name moqifei.com www.moqifei.com;
+        return 301 https://moqifei.com$request_uri;
 }
