nginx.conf调整转发php参数配置

--- a/lib/conf/nginx.conf
+++ b/lib/conf/nginx.conf
@@ -70,7 +70,6 @@ server
         root  /home/www/default;
 
         #error_page   404   /404.html;
-        #include enable-php.conf;
 
         location /nginx_status
         {
@@ -78,10 +77,10 @@ server
             access_log  off;
         }
 
-        location ~* \.php$
+        location ~ \.php$
         {
             fastcgi_index index.php;
-            fastcgi_pass  127.0.0.1:9000;
+            fastcgi_pass  unix:/tmp/php-cgi.sock;
             include       fastcgi_params;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
             fastcgi_param SCRIPT_NAME     $fastcgi_script_name;
