更新fastcgi链接sock的位置

--- a/lib/conf/enable-php-pathinfo.conf
+++ b/lib/conf/enable-php-pathinfo.conf
@@ -1,6 +1,6 @@
         location ~ [^/]\.php(/|$)
         {
-            fastcgi_pass  unix:/tmp/php-cgi.sock;
+            fastcgi_pass  unix:/dev/shm/php-cgi.sock;
             fastcgi_index index.php;
             include fastcgi.conf;
             include pathinfo.conf;
